syntax = "proto3";

package antifraud;
option go_package = ".;pb";

service AntifraudService {
  rpc Clean (Arg) returns (Output) {}
  rpc AddToWhiteList (Arg) returns (Output) {}
  rpc AddToBlackList (Arg) returns (Output) {}
  rpc DeleteFromWhiteList (Arg) returns (Output) {}
  rpc DeleteFromBlackList (Arg) returns (Output) {}
}

message Arg {
  repeated string args = 1;
}

message Output {
  int32 retcode = 1;
  bytes stdout = 2;
  bytes stderr = 3;
}